# torchlab

./: .gitignore  .gitmodules  LICENSE  Makefile  README  README.md
camera_calib/: README
camera_calib/calibration/: FLOORED_data_calib.m  FLOORED_findcenter_norrfin.m  FLOORED_findrho2theta.m  FLOORED_ocam_calib.m  FLOORED_optimizefunction.m  FLOORED_reproject_calib_thoby.m  FLOORED_undistort_image.m  FLOORED_world2cam_thoby.m  analyse_error.m  calibrate.m  (+11 more)
src/: cloudlab-env.lua  common.cmake
src/PointCloud/: CMakeLists.txt  PointCloud.lua  arcUpload.lua  filters.lua  fix_newline.lua  kdnode.lua  kdtree.lua  loader.lua  matrix_normal.c  pointcloud.c  test.lua  test_2.lua
src/PointCloud/test_pobot/: sweep.raw
src/PointCloud/test_stuff/: comments.txt  find_extents.lua  plane2.lua  segment.lua  test.lua  test2.lua  test3.lua
src/align/: CMakeLists.txt  run.lua
src/border_boundary/: Border.lua  CMakeLists.txt  border_ffi.cpp  border_ffi.lua
src/draw_test/: CMakeLists.txt  test.lua  test_glfw.cpp  test_glfw.lua
src/draw_test/shaders/: hello_world.frag  hello_world.vert
src/exe/: CMakeLists.txt  cloudlab-env.lua  cloudlab-exe.lua
src/image/: CMakeLists.txt  NonMaximalSuppression.lua  README.md  Wand.lua  hough.c  hough.lua  init.lua  libgm.lua  ops.lua  saliency.lua  test.lua
src/octomap/: CMakeLists.txt  ColorTree.lua  Tree.lua  color_voxel_tree_from_multiple_pointclouds.lua  color_voxel_tree_from_pointcloud.lua  octomap_ffi.cpp  octomap_ffi.lua  test.lua  tree_view.lua  visualize_empty.lua  voxel_tree_from_multiple_pointclouds.lua  voxel_tree_from_pointcloud.lua
src/opencv/: CMakeLists.txt  Detector.lua  Extractor.lua  ImgProc.lua  Keypoint.lua  Mat.lua  Matcher.lua  calib3d.lua  copencv.cpp  cvt_types.lua  examples.lua  flann.lua  imgproc.lua  init.lua  libopencv.lua  luaopencv.cpp  mat_types.lua  opencv.cpp  opencv_ffi.cpp  opencv_ffi.lua  test_detect.lua  utils.lua
src/opencv/generic/: copencv.cpp  opencv.cpp
src/opencv/test/: Detector.lua  Dilation.lua  Extractor.lua  FloorTransformation.lua  HoughLines.lua  Mat.lua  MatC.lua  Matcher.lua
src/opencv/types/: Colors.lua  Detector.lua  Extractor.lua  Mat.lua  Matcher.lua  Morph.lua
src/pcl/: CMakeLists.txt  PCLPointCloud.lua  pcl_ffi.cpp  pcl_ffi.lua
src/polyclipping/: CMakeLists.txt  polyclipping_ffi.cpp  polyclipping_ffi.lua  polyclipping_test.lua
src/protobuf/: CMakeLists.txt  PolyBox_pb.lua  containers.lua  decoder.lua  descriptor.lua  encoder.lua  init.lua  listener.lua  message.lua  pb.c  text_format.lua  type_checkers.lua  wire_format.lua
src/sandbox/joshua/: CMakeLists.txt  Untitled0.ipynb  limiting_mesh.lua  pancakes.lua  pcd_align.lua  planes_verification.lua  pointcloud.jl  sweep xy boundary.ipynb  testgl1.cpp  torch_plus.lua  workspace.lua
src/sandbox/joshua/plane_tools/: CMakeLists.txt  plane_tools.cpp  plane_tools.lua  test.lua  vArray.h
src/sandbox/joshua/point_vom/: CMakeLists.txt  point_vom.cpp  point_vom.lua
src/sandbox/pcl_stuff/pcl_register/: CMakeLists.txt  f_src.pcd  f_tgt.pcd  final_fc.pcd  k_src.pcd  k_tgt.pcd  n_src.pcd  n_tgt.pcd  nk_src.pcd  nk_tgt.pcd  pcl_register.cpp
src/sandbox/pcl_stuff/pcl_transform/: CMakeLists.txt  pcl_transform.cpp
src/sandbox/pcl_stuff/plane_fitter/: CMakeLists.txt  plane_fitter.cpp
src/sandbox/pcl_stuff/plane_fitter/output/: scan_nr_012345678_filtered_cloud.pcd  scan_nr_012345678_plane_0.pcd  scan_nr_012345678_plane_1.pcd  scan_nr_012345678_plane_2.pcd  scan_nr_012345678_plane_3.pcd  scan_nr_012345678_plane_4.pcd  scan_nr_012345678_plane_5.pcd  scan_nr_012345678_rest_6.pcd
src/sandbox/pcl_stuff/read_xyz_write_pcd/: CMakeLists.txt  read_xyz_write_pcd.cpp
src/shell/: CMakeLists.txt  completer.lua  readline_async.c  repl.lua  shell.lua
src/solve/: CMakeLists.txt  alignment_adjustment.cc  init.lua  problem_formulation.lua  run.lua  simple_bundle_adjuster.cc
src/solve/test/: problem-16-22106-pre-cam_index.lua  problem-16-22106-pre-observations.lua  problem-16-22106-pre-parameters.lua  problem-16-22106-pre-pt_index.lua  problem-16-22106-pre.lua
src/ui/: AnimationManager.lua  CMakeLists.txt  Camera.lua  Core3_2_context.h  FrameBuffer.lua  GLWidget.cpp  GLWidget.h  GLWidget.lua  ImgWidget.lua  LuaObject.cpp  LuaObject.h  Material.lua  MatrixStack.lua  Mesh.lua  ModelWalkerWidget.lua  Object.lua  Renderer.lua  ScanWidget.cpp  ScanWidget.h  Shader.lua  TextureManager.lua  Timer.lua  UpCamera.lua  gl.lua  glfw.lua  init.lua  libui.cpp  opengl.h  pp.lua  pp.ui  pp_config.lua  qui.cpp  qutil.cpp  qutil.h  resources.qrc  ui.c  ui.cpp  utils.cpp  utils.h
src/ui/config/: poseAlignConfig.txt
src/ui/engine/: BezierInterpolate.h  BufferObject.cpp  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Controller.h  ControllerManager.cpp  ControllerManager.h  DynamicsBase.h  Engine.cpp  Engine.h  FrameBuffer.cpp  FrameBuffer.h  GPUMemory.cpp  GPUMemory.h  Light.cpp  Light.h  LinearInterpolate.h  Material.cpp  Material.h  Matrices.h  MatricesManager.cpp  MatricesManager.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  PhysicsComponent.cpp  PhysicsComponent.h  PoseRefinementDataHandler.cpp  PoseRefinementDataHandler.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderDataHandler.cpp  ShaderDataHandler.h  Singleton.h  SmoothDampInterpolate.h  (+17 more)
src/ui/shaders/: _header_common.shader  _header_frag.shader  _header_vert.shader  identity.frag  normalmap.frag  shadow.frag  textured.frag  textured.vert  vertexHighlight.frag  vertexHighlight.vert  vertex_highlight.vert  wireframe.frag  wireframe.vert
src/ui/skylium/: BufferObject.cpp  BufferObject.h  Camera.cpp  Camera.h  GPUMemory.cpp  GPUMemory.h  Light.cpp  Light.h  Material.cpp  Material.h  Matrices.h  MatricesManager.cpp  MatricesManager.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  ShaderDataHandler.cpp  ShaderDataHandler.h  Skylium.cpp  Skylium.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Timer.cpp  Vectors.h  Vertex.cpp  Vertex.h  config.cpp  config.h  imgUtils.cpp  imgUtils.h  utils.cpp  (+1 more)
(+493 files in other folders)
