cmake_minimum_required (VERSION 2.6 FATAL_ERROR)
find_package(Torch REQUIRED)

get_filename_component(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR} PATH)

ADD_TORCH_LUA2EXE(cloudlab-exe "${CMAKE_CURRENT_SOURCE_DIR}/cloudlab-exe.lua")
SET_TARGET_PROPERTIES(cloudlab-exe PROPERTIES OUTPUT_NAME "cloudlab")

INSTALL(
  TARGETS cloudlab-exe
  RUNTIME DESTINATION "${Torch_INSTALL_BIN_SUBDIR}"
  LIBRARY DESTINATION "${Torch_INSTALL_LIB_SUBDIR}"
  ARCHIVE DESTINATION "${Torch_INSTALL_LIB_SUBDIR}")

