cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
cmake_policy(VERSION 2.6)
include(../common.cmake REQUIRED)

ADD_TORCH_LUA2EXE(cloudlab-exe "${CMAKE_CURRENT_SOURCE_DIR}/cloudlab-exe.lua")
SET_TARGET_PROPERTIES(cloudlab-exe PROPERTIES OUTPUT_NAME "cloudlab")

INSTALL(
  TARGETS cloudlab-exe
  RUNTIME DESTINATION "${Torch_INSTALL_BIN_SUBDIR}"
  LIBRARY DESTINATION "${Torch_INSTALL_LIB_SUBDIR}"
  ARCHIVE DESTINATION "${Torch_INSTALL_LIB_SUBDIR}")

