cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
cmake_policy(VERSION 2.6)
include(../common.cmake REQUIRED)

ADD_TORCH_LUA2EXE(cloudlab "${CMAKE_CURRENT_SOURCE_DIR}/cloudlab.lua")

INSTALL(
  TARGETS cloudlab
  RUNTIME DESTINATION "${Torch_INSTALL_BIN_SUBDIR}"
  LIBRARY DESTINATION "${Torch_INSTALL_LIB_SUBDIR}"
  ARCHIVE DESTINATION "${Torch_INSTALL_LIB_SUBDIR}"
)


CONFIGURE_FILE(cook.lua "${CMAKE_CURRENT_BINARY_DIR}/cook.lua")
ADD_TORCH_LUA2EXE(cook "${CMAKE_CURRENT_BINARY_DIR}/cook.lua")

INSTALL(
  TARGETS cook
  RUNTIME DESTINATION "${Torch_INSTALL_BIN_SUBDIR}"
  LIBRARY DESTINATION "${Torch_INSTALL_LIB_SUBDIR}"
  ARCHIVE DESTINATION "${Torch_INSTALL_LIB_SUBDIR}"
)


