CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

INCLUDE(../../common.cmake REQUIRED)
SET(package test)

find_package(GLFW REQUIRED)
find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)
INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIR})
#link_libraries(${GLEW_GLEW_LIBRARY})

MESSAGE(${GLEW_LIBRARIES})
MESSAGE(${GLEW_INCLUDE_DIR})
MESSAGE(${GLFW_INCLUDE_DIR})

SET(src testgl1.cpp)

add_executable(${package} ${src})
TARGET_LINK_LIBRARIES(${package} ${GLFW_LIBRARY} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES})


install(TARGETS ${package} RUNTIME DESTINATION bin)


