CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

CMAKE_POLICY(VERSION 2.6)

INCLUDE(../common.cmake REQUIRED)

PROJECT(pcl_register)

LINK_DIRECTORIES(${install_lib})

FIND_PACKAGE(PCL 1.5 REQUIRED)

INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
LINK_DIRECTORIES(${PCL_LIBRARY_DIRS})
ADD_DEFINITIONS(${PCL_DEFINITIONS})

ADD_EXECUTABLE (pcl_register pcl_register.cpp)
TARGET_LINK_LIBRARIES (pcl_register ${PCL_LIBRARIES})
